chore(icons): fix dark mode bg

--- a/docs/src/less/index.less
+++ b/docs/src/less/index.less
@@ -409,7 +409,7 @@ span.demo__inner {
 
 .demo-icon-boxes li {
     align-items: center;
-    background-color: var(--color-neutral-1);
+    background-color: var(--color-background-secondary);
     border: 1px solid var(--color-neutral-3);
     display: inline-flex;
     flex-direction: column;
